# rs-broker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Containerfile.test  Dockerfile  LICENSE  Makefile  README.md  compose.test.yml  compose.yml
config/: default.toml
crates/rs-broker-config/: Cargo.toml
crates/rs-broker-config/src/: database.rs  grpc.rs  kafka.rs  lib.rs  retry.rs  server.rs  settings.rs
crates/rs-broker-core/: Cargo.toml
crates/rs-broker-core/benches/: dlq.rs  lib.rs  outbox_manager.rs  outbox_publisher.rs  retry.rs
crates/rs-broker-core/src/: error.rs  lib.rs
crates/rs-broker-core/src/dlq/: handler.rs  mod.rs
crates/rs-broker-core/src/grpc_client/: channel_pool.rs  dispatcher.rs  mod.rs
crates/rs-broker-core/src/inbox/: dedup.rs  dispatcher.rs  manager.rs  mod.rs
crates/rs-broker-core/src/outbox/: manager.rs  mod.rs  publisher.rs  retry.rs
crates/rs-broker-core/src/subscriber/: mod.rs  registry.rs
crates/rs-broker-db/: Cargo.toml
crates/rs-broker-db/benches/: inbox.rs  lib.rs  outbox.rs  pool.rs  subscriber.rs
crates/rs-broker-db/src/: lib.rs  migration.rs  pool.rs
crates/rs-broker-db/src/dlq/: entity.rs  mod.rs  repository.rs
crates/rs-broker-db/src/inbox/: entity.rs  mod.rs  repository.rs
crates/rs-broker-db/src/outbox/: entity.rs  mod.rs  repository.rs
crates/rs-broker-db/src/subscriber/: entity.rs  mod.rs  repository.rs
crates/rs-broker-kafka/: Cargo.toml
crates/rs-broker-kafka/benches/: config.rs  consumer.rs  e2e.rs  kafka_fixture.rs  lib.rs  producer.rs
crates/rs-broker-kafka/src/: config.rs  error.rs  headers.rs  lib.rs
crates/rs-broker-kafka/src/consumer/: client.rs  mod.rs
crates/rs-broker-kafka/src/producer/: client.rs  mod.rs
crates/rs-broker-proto/: Cargo.toml  build.rs
crates/rs-broker-proto/src/: lib.rs  rsbroker.rs
crates/rs-broker-server/: Cargo.toml
crates/rs-broker-server/benches/: consumer_service.rs  integration.rs  lib.rs  publish.rs  status.rs
crates/rs-broker-server/src/: app.rs  lib.rs  main.rs  metrics.rs
crates/rs-broker-server/src/grpc/: mod.rs  service.rs
crates/rs-broker-server/tests/: integration_test.rs
crates/rs-broker-server/tests/common/: mod.rs
deploy/: prometheus.yml
docs/: architecture.md  configuration.md  data-model.md  grpc-proto.md  project-structure.md
examples/: demo.sh  subscriber_client.py
migrations/: 0001_init.sql
proto/: rs_broker.proto
scripts/: install-hooks.sh  podman-test.sh  verify.sh
scripts/hooks/: pre-commit  pre-push
