[package]
name = "rs-broker-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

rs-broker-config = { workspace = true }
rs-broker-db = { workspace = true }
rs-broker-kafka = { workspace = true }
rs-broker-proto = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.35", features = ["rt", "macros"] }
futures-util = "0.3"
parking_lot = "0.12"
rand = "0.8"

[features]
default = ["postgres"]
postgres = ["rs-broker-db/postgres"]
mysql = ["rs-broker-db/mysql"]
